Fix text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   font-weight: 600;
   -moz-text-align-last: center;
-  text-align-last: center;
+  text-align-last: center !important;
   font-family: "Poppins", sans-serif;
 }
 
